# maglev-tcn-gap-estimation

./: .gitignore  README.md  eval_tcn.py  eval_tcn_denorm.py  export_paper_data.py  export_quant_hpp.py  export_quant_pow2.py  main.py  make_tb_csv.py  peek_width_ablation.py  pi_fit_gap.py  plot_paper_figures.m  plot_pi_pred.py  pyproject.toml  quant_eval.py  raw2csv.py  requirements.txt  run_all_experiments.py  stream_infer_exact.py  tcn_vs_lstm.py  train_experiments.py
artifacts/pi/: pi_gap_model.npz
artifacts/quant/: quant_params.npz  quant_report.json
configs/data/: default.yaml
configs/experiments/: core.yaml  width_ablation.yaml
configs/models/: cnn1d.yaml  lstm.yaml  mlp.yaml  tcn.yaml  tcn_distill.yaml
configs/pi/: pi_gap.yaml
configs/quant/: pow2.yaml
configs/train/: lstm_teacher_default.yaml  mlp_teacher_default.yaml  tcn_smoke.yaml  (+5 more)
results/: ablation_no_diff.pt  ablation_no_diff_metrics.json  ablation_no_duty.pt  ablation_no_duty_metrics.json  ablation_no_ripple.pt  ablation_no_ripple_metrics.json  ablation_raw_only.pt  ablation_raw_only_metrics.json  all_results.json  baseline_1dcnn.pt  baseline_1dcnn_metrics.json  baseline_lstm.pt  baseline_lstm_metrics.json  baseline_mlp.pt  baseline_mlp_metrics.json  proposed_tcn.pt  proposed_tcn_per_condition.json  tcn_ch128.pt  tcn_ch128_metrics.json  tcn_ch16.pt  tcn_ch16_metrics.json  tcn_ch32.pt  tcn_ch32_metrics.json  tcn_ch64.pt  tcn_ch64_metrics.json  tcn_ch8.pt  tcn_ch8_metrics.json  warmup_data.mat  y_pred.npy  y_true.npy
scripts/: eval.py  export.py  quant.py  run_distill_comparison.py  train.py
(+47 files in other folders)
