[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maglev-gap"
version = "0.1.0"
description = "TCN-based maglev air-gap estimation and deployment toolkit"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "PyYAML",
    "scipy",
    "matplotlib",
    "tqdm",
    "colorama",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]
